Remove some usages of Guava in API